Revert the refactor to kotlin but keep the changes such as grouping