@@ -1,17 +1,20 @@
 plugins {
 	id 'java'
-    id 'org.jetbrains.kotlin.jvm'
 }
 
 repositories {
 	mavenLocal()
 	maven {
 		url = 'https://repo.runelite.net'
+        content {
+            includeGroupByRegex("net\\.runelite.*")
+        }
 	}
 	mavenCentral()
 }
 
 def runeLiteVersion = 'latest.release'
+def pluginMainClass = 'com.camerapoints.CameraPointsPluginTest'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
@@ -22,15 +25,51 @@ dependencies {
 	testImplementation 'junit:junit:4.12'
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 group = 'com.camerapoints'
 version = '3.0.0'
-sourceCompatibility = '1.8'
 
-tasks.withType(JavaCompile) {
+tasks.withType(JavaCompile).configureEach {
 	options.encoding = 'UTF-8'
+    options.release.set(11)
 }
-compileKotlin {
+
+tasks.register('run', JavaExec) {
+    classpath = sourceSets.test.runtimeClasspath
+    mainClass = pluginMainClass
+
+    jvmArgs "-ea", "--add-opens=java.desktop/sun.awt=ALL-UNNAMED", "-Djava.awt.headless=false", "-Dfile.encoding=UTF-8"
+    args "--developer-mode", "--debug"
+    standardInput = System.in
+    doLast {
+        "pkill -f RuneLite".execute()
+    }
 }
+
+tasks.register('shadowJar', Jar) {
+    dependsOn configurations.testRuntimeClasspath
+    manifest{
+        attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
+    }
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from sourceSets.main.output
+    from sourceSets.test.output
+    from {
+        configurations.testRuntimeClasspath.collect { file ->
+            file.isDirectory() ? file : zipTree(file)
+        }
+    }
+
+    exclude 'META-INF/INDEX.LIST'
+    exclude 'META-INF/*.SF'
+    exclude 'META-INF/*.DSA'
+    exclude 'META-INF/*.RSA'
+    exclude '**/module-info.class'
+
+    group = BasePlugin.BUILD_GROUP
+    archiveClassifier.set('shadow')
+    archiveFileName.set("camera-points-3.0.0-all.jar")
+}
+
